Fixed 'Send' and 'Clear' button spacing so they are closer together.

--- a/app/assets/stylesheets/moj/_buttons.scss
+++ b/app/assets/stylesheets/moj/_buttons.scss
@@ -25,7 +25,7 @@
   }
 
   .button {
-    margin-right: $gutter;
+    margin-right: $gutter-half;
     margin-top: $gutter;
   }
 }
@@ -206,4 +206,9 @@ a.govuk-back-link {
 
 .sent-to-sscl-remove-date {
   margin: 0 0 20px 0;
+}
+
+.moj-style-link {
+  margin-top: 37px;
+  padding: 0;
 }
